html framing and JS variables

--- a/index.html
+++ b/index.html
@@ -13,5 +13,16 @@
     <header>
         <h1>5 Day Forecast</h1>
     </header>
+    <section>
+        <aside>
+            <h3>Search for a city:</h3>
+            <input type="text" placeholder="Paris">
+            <button class="search" id="SearchBtn">Search</button>
+        </aside>
+    </section>
+
+    <!--JQuery-->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 </html>
