--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <section>
         <aside>
             <h3>Search for a city:</h3>
-            <input type="text" placeholder="Paris">
+            <input type="text" id="search-city" placeholder="Paris">
             <button class="search" id="SearchBtn">Search</button>
         </aside>
     </section>
 
     <!--JQuery-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="./assets/script.js"></script>
 </body>
 </html>
