--- a/index.html
+++ b/index.html
@@ -21,6 +21,58 @@
         </aside>
     </section>
 
+    <section class="CityDet">
+        <section class="TextCont" id="today">
+            <h3 id="cityName"> <span id="date"></span></h3>
+            <p id="temp"></p>
+            <p id="wind"></p>
+            <p id="humidity"></p>
+            <p id="index"></p>
+        </section>
+    </section>
+
+    <section class="WeatherCards">
+        <h3 id="fiveDayFor" class="lighting">5-Day Forecast:</h3>
+        <section class="forecastCard">
+            <p id="date1"></p>
+            <p id="temp1"></p>
+            <p id="wind1"></p>
+            <p id="humidity1"></p>
+            <img id="icon1" scr="https://openweathermap.org/img/w/10d.png">
+        </section>
+
+        <section class="forecastCard">
+            <p id="date2"></p>
+            <p id="temp2"></p>
+            <p id="wind2"></p>
+            <p id="humidity2"></p>
+            <img id="icon2" scr="https://openweathermap.org/img/w/10d.png">
+        </section>
+
+        <section class="forecastCard">
+            <p id="date3"></p>
+            <p id="temp3"></p>
+            <p id="wind3"></p>
+            <p id="humidity3"></p>
+            <img id="icon3" scr="https://openweathermap.org/img/w/10d.png">
+        </section>
+
+        <section class="forecastCard">
+            <p id="date4"></p>
+            <p id="temp4"></p>
+            <p id="wind4"></p>
+            <p id="humidity4"></p>
+            <img id="icon4" scr="https://openweathermap.org/img/w/10d.png">
+        </section>
+
+        <section class="forecastCard">
+            <p id="date5"></p>
+            <p id="temp5"></p>
+            <p id="wind5"></p>
+            <p id="humidity5"></p>
+            <img id="icon5" scr="https://openweathermap.org/img/w/10d.png">
+        </section>
+    </section>
     <!--JQuery-->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="./assets/script.js"></script>
