--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
             <input type="text" id="search-city" placeholder="Paris">
             <button class="search" id="SearchBtn">Search</button>
         </aside>
+        <aside id="BtnSpots">
+
+        </aside>
     </section>
 
     <section class="CityDet">
